--- a/src/scss/components/icon/_variables.scss
+++ b/src/scss/components/icon/_variables.scss
@@ -18,10 +18,28 @@ $icon-sizes: (
   "40": (
     "size": "10"
   ),
-  "64": (
+  "48": (
     "size": "12"
   ),
-  "80": (
+  "56": (
     "size": "14"
+  ),
+  "64": (
+    "size": "16"
+  ),
+  "80": (
+    "size": "20"
+  ),
+  "96": (
+    "size": "24"
+  ),
+  "128": (
+    "size": "32"
+  ),
+  "192": (
+    "size": "48"
+  ),
+  "256": (
+    "size": "64"
   )
 ) !default;
