--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -5,6 +5,7 @@
 // @import "article";
 @import "avatar";
 @import "badge";
+@import "breadcrumbs";
 @import "button";
 @import "card";
 @import "close";
@@ -32,7 +33,7 @@
 // Layout - Utils
 
 @import "divider";
-@import "space";
+@import "spacer";
 @import "scroller";
 
 // Grid
