--- a/src/scss/components/sider/_base.scss
+++ b/src/scss/components/sider/_base.scss
@@ -25,8 +25,13 @@
 
 // Width
 
-@each $width in $sider-widths {
+@each $width, $props in $sider-widths {
   .sider-width-#{$width} {
+    $min-width: map.get($props, "min-width");
+    $width: map.get($props, "width");
+
+    @include map-props-mixin(
+      map.get($component-min-width-sizing, $min-width));
     @include map-props-mixin(
       map.get($component-width-sizing, $width));
   }
