--- a/src/scss/components/spacer/_variables.scss
+++ b/src/scss/components/spacer/_variables.scss
@@ -1,4 +1,4 @@
-$space-gaps: (
+$spacer-gaps: (
   "1": (
     "gap": "1"
   ),
@@ -10,5 +10,11 @@ $space-gaps: (
   ),
   "4": (
     "gap": "4"
+  ),
+  "6": (
+    "gap": "6"
+  ),
+  "8": (
+    "gap": "8"
   )
 ) !default;
