--- a/src/scss/components/avatar/_base.scss
+++ b/src/scss/components/avatar/_base.scss
@@ -38,13 +38,15 @@
   box-sizing: border-box;
   display: inline-flex;
 
+  > * {
+    &:not(:first-child) {
+      margin-left: -0.5rem;
+    }
+  }
+
   > .avatar {
     .avatar-img {
       border: 2px solid white;
-    }
-
-    &:not(:first-child) {
-      margin-left: -0.5rem;
     }
   }
 }
