--- a/src/scss/components/button/_base.scss
+++ b/src/scss/components/button/_base.scss
@@ -9,6 +9,7 @@
   cursor: pointer;
   display: inline-flex;
   justify-content: center;
+  letter-spacing: $button-letter-spacing;
   text-decoration: none;
   transition: all $button-transition-duration;
 
