--- a/src/scss/components/button/_variables.scss
+++ b/src/scss/components/button/_variables.scss
@@ -1,4 +1,5 @@
 $button-border-width: var(--component-border-width-base) !default;
+$button-letter-spacing: 0.5px !default;
 $button-patterns: (
   "solid", "subtle", "colored", "outline", "ghost", "link"
 ) !default;
@@ -14,7 +15,7 @@ $button-sizes: (
     "font-size": "sm",   "gap": "1", "height": "8",  "padding-x": "4",  "width": "8"
   ),
   "md": (
-    "font-size": "base", "gap": "1", "height": "10",  "padding-x": "4", "width": "10"
+    "font-size": "sm", "gap": "1", "height": "10",  "padding-x": "4", "width": "10"
   ),
   "lg": (
     "font-size": "base", "gap": "2",  "height": "12", "padding-x": "5", "width": "12"
