--- a/src/scss/components/container/_base.scss
+++ b/src/scss/components/container/_base.scss
@@ -1,5 +1,4 @@
-.container,
-.container-fluid {
+%container {
   box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
@@ -7,10 +6,15 @@
   width: 100%;
 }
 
+.container,
+.container-fluid {
+  @extend %container;
+}
+
 // Responsive containers that are 100% wide until a breakpoint
 @each $breakpoint, $container-max-width in $container-max-widths-map {
   .container-#{$breakpoint} {
-    @extend %container-fluid !optional;
+    @extend %container !optional;
   }
 
   @include media-breakpoint-up($breakpoint, $breakpoints-map) {
