--- a/src/scss/components/typography/_base.scss
+++ b/src/scss/components/typography/_base.scss
@@ -28,7 +28,7 @@
     h4#{&} {
       font-size: $headline-4-font-size;
       font-weight: $headline-4-font-weight;
-      letter-spacing: 0.25px;
+      letter-spacing: 0;
     }
 
     h5#{&} {
