--- a/src/scss/root/_typography.scss
+++ b/src/scss/root/_typography.scss
@@ -14,9 +14,13 @@
 
   /* Font Size */
 
+  --font-size-base: #{$font-size-base};
+  --font-size-sm: #{$font-size-sm};
+  --font-size-xs: #{$font-size-xs};
+  --font-size-xxs: #{$font-size-xxs};
+
   // -- Body
 
-  --font-size-base: #{$font-size-base};
   --font-size-body-1: #{$font-size-body-1};
   --font-size-body-2: #{$font-size-body-2};
 
