--- a/src/scss/typography/_text.scss
+++ b/src/scss/typography/_text.scss
@@ -17,6 +17,16 @@ strong {
 }
 
 a {
+  color: var(--color-link);
   cursor: pointer;
   text-decoration: none;
+
+  &:hover,
+  &:focus {
+    color: var(--color-link-hover);
+  }
+
+  &:active {
+    color: var(--color-link-active);
+  }
 }
