--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 /**
  *
  * Theme (Base)
@@ -18,6 +20,7 @@ $color-secondary: #9e9e9e !default;
 $color-secondary-yiq: color-yiq($color-secondary) !default;
 $color-secondary-subtle: color-subtle-light-mix($color-secondary) !default;
 $color-secondary-subtle-yiq: color-yiq($color-secondary-subtle) !default;
+$color-secondary-lt: color-subtle-light-mix($color-secondary, $brightness-48) !default;
 
 /* Accent */
 
@@ -25,6 +28,7 @@ $color-accent: #00c853 !default;
 $color-accent-yiq: color-yiq($color-accent) !default;
 $color-accent-subtle: color-subtle-light-mix($color-accent) !default;
 $color-accent-subtle-yiq: color-yiq($color-accent-subtle) !default;
+$color-accent-lt: color-subtle-light-mix($color-accent, $brightness-48) !default;
 
 /**
  *
@@ -38,6 +42,7 @@ $color-success: #43a047 !default;
 $color-success-yiq: color-yiq($color-success) !default;
 $color-success-subtle: color-subtle-light-mix($color-success) !default;
 $color-success-subtle-yiq: color-yiq($color-success-subtle) !default;
+$color-success-lt: color-subtle-light-mix($color-success, $brightness-48) !default;
 
 /* Info */
 
@@ -45,6 +50,7 @@ $color-info: #1e88e5 !default;
 $color-info-yiq: color-yiq($color-info) !default;
 $color-info-subtle: color-subtle-light-mix($color-info) !default;
 $color-info-subtle-yiq: color-yiq($color-info-subtle) !default;
+$color-info-lt: color-subtle-light-mix($color-info, $brightness-48) !default;
 
 /* Warning */
 
@@ -52,6 +58,7 @@ $color-warning: #fdd835 !default;
 $color-warning-yiq: color-yiq($color-warning) !default;
 $color-warning-subtle: color-subtle-light-mix($color-warning) !default;
 $color-warning-subtle-yiq: color-yiq($color-warning-subtle) !default;
+$color-warning-lt: color-subtle-light-mix($color-warning, $brightness-48) !default;
 
 /* Error */
 
@@ -59,6 +66,7 @@ $color-error: #e53935 !default;
 $color-error-yiq: color-yiq($color-error) !default;
 $color-error-subtle: color-subtle-light-mix($color-error) !default;
 $color-error-subtle-yiq: color-yiq($color-error-subtle) !default;
+$color-error-lt: color-subtle-light-mix($color-error, $brightness-48) !default;
 
 /**
  *
@@ -109,8 +117,8 @@ $color-body-disabled: #bdbdbd !default;
 /* Link */
 
 $color-link: $color-primary !default;
-$color-link-hover: adjust($color-link, -$brightness-16) !default;
-$color-link-active: adjust($color-link, -$brightness-24) !default;
+$color-link-hover: color.adjust($color-link, $lightness: $brightness-8) !default;
+$color-link-active: color.adjust($color-link, $blackness: $brightness-24) !default;
 
 /* Icon */
 
