--- a/src/scss/components/avatar/_variables.scss
+++ b/src/scss/components/avatar/_variables.scss
@@ -1,5 +1,5 @@
 $avatar-bg: var(--color-bg-dker);
-$avatar-border-radius: var(--component-border-radius-base);
+$avatar-border-radius: var(--border-radius-base);
 $avatar-shapes: ("base", "rounded") !default;
 $avatar-sizes: (
   "xxs": (
