--- a/src/scss/components/content/_variables.scss
+++ b/src/scss/components/content/_variables.scss
@@ -2,6 +2,6 @@ $content-colors: ("white") !default;
 $content-patterns: ("solid", "subtle") !default;
 $content-sizes: (
   "base": (
-    "font-size": "sm", "padding-x": "6", "padding-y": "4"
+    "padding-x": "4", "padding-y": "4"
   )
 ) !default;
