--- a/src/scss/components/footer/_variables.scss
+++ b/src/scss/components/footer/_variables.scss
@@ -1,6 +1,6 @@
 $footer-patterns: ("solid", "subtle") !default;
 $footer-sizes: (
   "base": (
-    "font-size": "sm", "padding-x": "6", "padding-y": "4"
+    "padding-x": "6", "padding-y": "4"
   )
 ) !default;
