--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -5,12 +5,13 @@
 // @import "article";
 @import "avatar";
 @import "badge";
+@import "box";
 @import "breadcrumbs";
 @import "button";
 @import "card";
 @import "close";
 @import "dot";
-@import "figure";
+@import "dropdown";
 @import "icon";
 @import "menu";
 
