--- a/src/scss/root/index.scss
+++ b/src/scss/root/index.scss
@@ -4,6 +4,7 @@
 @import "brightness";
 @import "colors";
 @import "grid";
+@import "shadows";
 @import "sizing";
 @import "spacing";
 @import "typography";
