--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -18,11 +18,6 @@ $font-size-sm: math.div($font-size-base, $font-scale) !default;
 $font-size-xs: math.div($font-size-sm, $font-scale) !default;
 $font-size-xxs: math.div($font-size-xs, $font-scale) !default;
 
-// -- Body
-
-$font-size-body-2: math.div(1em, $font-scale) !default;
-$font-size-body-1: $font-size-body-2 * ($font-scale) !default;
-
 // -- Headline
 
 $font-size-headline-6: 1em * ($font-scale) !default;
@@ -36,6 +31,15 @@ $font-size-headline-1: $font-size-headline-2 * ($font-scale) !default;
 
 $font-size-subtitle-2: math.div(1em, $font-scale) !default;
 $font-size-subtitle-1: $font-size-subtitle-2 * ($font-scale) !default;
+
+// -- Body
+
+$font-size-body-2: math.div(1em, $font-scale) !default;
+$font-size-body-1: $font-size-body-2 * ($font-scale) !default;
+
+// -- Caption
+
+$font-size-caption: math.div(math.div(1em, $font-scale), $font-scale) !default;
 
 /* Font Weight */
 
