--- a/src/scss/components/box/_variables.scss
+++ b/src/scss/components/box/_variables.scss
@@ -1,10 +1,10 @@
-$figure-border-width: var(--component-border-width-base);
-$figure-patterns: ("solid", "subtle", "outline") !default;
-$figure-shapes: (
+$box-border-width: var(--border-width-base);
+$box-patterns: ("solid", "subtle", "outline") !default;
+$box-shapes: (
   "base",
   "rounded"
 ) !default;
-$figure-sizes: (
+$box-sizes: (
   "sm": (
     "height": "6",  "padding": "3", "width": "6"
   ),
@@ -16,5 +16,11 @@ $figure-sizes: (
   ),
   "lg": (
     "height": "12", "padding": "5", "width": "12"
+  ),
+  "xl": (
+    "height": "14", "padding": "6", "width": "14"
+  ),
+  "xxl": (
+    "height": "16", "padding": "7", "width": "16"
   )
 ) !default;
