--- a/src/scss/components/card/_variables.scss
+++ b/src/scss/components/card/_variables.scss
@@ -1,5 +1,5 @@
-$card-border-radius: var(--component-border-radius-base);
-$card-border-width: var(--component-border-width-base);
+$card-border-radius: var(--border-radius-base);
+$card-border-width: var(--border-width-base);
 $card-patterns: ("solid") !default;
 
 // Children
@@ -8,7 +8,7 @@ $card-patterns: ("solid") !default;
 
 $card-header-sizes: (
   "base": (
-    "font-size": "sm", "min-height": "14", "padding-x": "6", "padding-top": "4"
+    "min-height": "14", "padding-x": "6", "padding-y": "6"
   )
 ) !default;
 
@@ -16,7 +16,7 @@ $card-header-sizes: (
 
 $card-body-sizes: (
   "base": (
-    "font-size": "sm", "padding-x": "6", "padding-y": "4"
+    "padding-x": "6", "padding-y": "6"
   )
 ) !default;
 
@@ -24,6 +24,6 @@ $card-body-sizes: (
 
 $card-footer-sizes: (
   "base": (
-    "font-size": "sm", "padding-x": "6", "padding-y": "4"
+    "padding-x": "6", "padding-y": "6"
   )
 ) !default;
