--- a/src/scss/components/divider/_variables.scss
+++ b/src/scss/components/divider/_variables.scss
@@ -1,5 +1,5 @@
 $divider-border-color: var(--color-border) !default;
-$divider-border-width: var(--component-border-width-base) !default;
+$divider-border-width: var(--border-width-base) !default;
 $divider-sizes: (
   "1": (
     "font-size": "sm", "gap": "3", "margin": "1"
