--- a/src/scss/components/header/_base.scss
+++ b/src/scss/components/header/_base.scss
@@ -4,6 +4,7 @@
   align-items: center;
   box-sizing: border-box;
   display: flex;
+  flex-shrink: 0;
 }
 
 // Color
@@ -26,18 +27,15 @@
 
 @each $size, $props in $header-sizes {
   .header-size-#{$size} {
-    $font-size: map.get($props, "font-size");
     $min-height: map.get($props, "min-height");
     $padding-x: map.get($props, "padding-x");
-    $padding-top: map.get($props, "padding-top");
+    $padding-y: map.get($props, "padding-y");
 
-    @include map-props-mixin(
-      map.get($component-font-sizing, $font-size));
     @include map-props-mixin(
       map.get($component-min-height-sizing, $min-height));
     @include map-props-mixin(
       map.get($component-padding-x-sizing, $padding-x));
     @include map-props-mixin(
-      map.get($component-padding-top-sizing, $padding-top));
+      map.get($component-padding-y-sizing, $padding-y));
   }
 }
