--- a/src/scss/components/header/_variables.scss
+++ b/src/scss/components/header/_variables.scss
@@ -1,6 +1,6 @@
 $header-patterns: ("solid", "subtle") !default;
 $header-sizes: (
   "base": (
-    "font-size": "sm", "min-height": "14", "padding-x": "6", "padding-top": "4"
+    "min-height": "14", "padding-x": "6", "padding-y": "4"
   )
 ) !default;
