--- a/src/scss/components/row/_variables.scss
+++ b/src/scss/components/row/_variables.scss
@@ -2,6 +2,15 @@ $row-gaps: (
   "0": (
     "gap": "0"
   ),
+  "1": (
+    "gap": "1"
+  ),
+  "2": (
+    "gap": "2"
+  ),
+  "3": (
+    "gap": "3"
+  ),
   "4": (
     "gap": "4"
   ),
