--- a/src/scss/root/_brightness.scss
+++ b/src/scss/root/_brightness.scss
@@ -7,5 +7,5 @@
   --brightness-16: #{$brightness-16};
   --brightness-24: #{$brightness-24};
   --brightness-32: #{$brightness-32};
-  --component-brightness-base: #{$component-brightness-base};
+  --component-brightness-base: #{$brightness-8};
 }
