--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -78,10 +78,11 @@ $color-error-lt: color-subtle-light-mix($color-error, $brightness-48) !default;
 
 $color-white: #fff !default;
 $color-white-yiq: color-yiq($color-white) !default;
+$color-white-subtle: color.adjust($color-white, $blackness: $brightness-4) !default;
 
 /* Light */
 
-$color-light: #e0e0e0 !default;
+$color-light: #bdbdbd !default;
 $color-light-yiq: color-yiq($color-light) !default;
 $color-light-subtle: color-subtle-light-mix($color-light, $brightness-16) !default;
 $color-light-subtle-yiq: color-yiq($color-light-subtle) !default;
@@ -90,6 +91,7 @@ $color-light-subtle-yiq: color-yiq($color-light-subtle) !default;
 
 $color-black: #000 !default;
 $color-black-yiq: color-yiq($color-black) !default;
+$color-black-subtle: color-subtle-light-mix($color-black) !default;
 
 /* Dark */
 
@@ -97,6 +99,14 @@ $color-dark: #212121 !default;
 $color-dark-yiq: color-yiq($color-dark) !default;
 $color-dark-subtle: color-subtle-light-mix($color-dark, $brightness-24) !default;
 $color-dark-subtle-yiq: color-yiq($color-dark-subtle) !default;
+
+/**
+ *
+ * Shadows
+ *
+ */
+
+$color-shadow: #9e9e9e !default;
 
 /**
  *
