--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -1,47 +1,69 @@
-// Components
-
-@import "alert";
-
 // @import "article";
+// @import "image";
+// @import "nav";
+// @import "navbar";
+
+// General
+
+@import "button";
+@import "close";
+
+// Containers
+
+@import "box";
+@import "card";
+
+// Data Display
+
 @import "avatar";
 @import "badge";
-@import "box";
-@import "breadcrumbs";
-@import "button";
-@import "card";
-@import "close";
 @import "dot";
-@import "dropdown";
-@import "icon";
+@import "list-group";
 @import "menu";
+
+// Data Entry
 
 // @import "form";
 // @import "form-control";
 // @import "input-group";
-// @import "image";
-// @import "nav";
-// @import "navbar";
-@import "tooltip";
+
+// Feedback
+
+@import "alert";
+@import "progress";
 
 // Layout
 
-@import "layout";
-@import "header";
-@import "sider";
 @import "content";
 @import "footer";
+@import "header";
+@import "layout";
+@import "sider";
+
+// Layout - Containers
+
+@import "row";
+@import "col";
+@import "container";
+@import "scroller";
 
 // Layout - Utils
 
 @import "divider";
 @import "spacer";
-@import "scroller";
 
-// Grid
+// Media
 
-@import "row";
-@import "col";
-@import "container";
+@import "icon";
+
+// Navigation
+
+@import "breadcrumbs";
+
+// Overlay
+
+@import "dropdown";
+@import "tooltip";
 
 // Typography
 
