--- a/src/scss/components/container/_base.scss
+++ b/src/scss/components/container/_base.scss
@@ -1,5 +1,6 @@
 %container {
   box-sizing: border-box;
+  display: flex;
   margin-left: auto;
   margin-right: auto;
   padding: $container-padding-y $container-padding-x;
