--- a/src/scss/components/dropdown/_base.scss
+++ b/src/scss/components/dropdown/_base.scss
@@ -6,7 +6,7 @@
   border-width: $dropdown-border-width;
   box-shadow: $dropdown-box-shadow;
   box-sizing: border-box;
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   overflow: hidden;
 }
