--- a/src/scss/components/progress/_mixins.scss
+++ b/src/scss/components/progress/_mixins.scss
@@ -2,8 +2,16 @@
   @if $pattern == "solid" {
     @include progress-solid-mixin;
   }
+
+  @if $pattern == "subtle" {
+    @include progress-subtle-mixin;
+  }
 }
 
 @mixin progress-solid-mixin {
   @include component-solid-mixin;
+}
+
+@mixin progress-subtle-mixin {
+  @include component-subtle-mixin;
 }
