--- a/src/scss/root/_typography.scss
+++ b/src/scss/root/_typography.scss
@@ -18,6 +18,7 @@
   --font-size-sm: #{$font-size-sm};
   --font-size-xs: #{$font-size-xs};
   --font-size-xxs: #{$font-size-xxs};
+  --font-size-xxxs: #{$font-size-xxxs};
 
   // -- Headline
 
@@ -32,11 +33,13 @@
 
   --font-size-subtitle-1: #{$font-size-subtitle-1};
   --font-size-subtitle-2: #{$font-size-subtitle-2};
+  --font-size-subtitle-3: #{$font-size-subtitle-3};
 
   // -- Body
 
   --font-size-body-1: #{$font-size-body-1};
   --font-size-body-2: #{$font-size-body-2};
+  --font-size-body-3: #{$font-size-body-3};
 
   // -- Caption
 
