--- a/src/scss/components/box/_variables.scss
+++ b/src/scss/components/box/_variables.scss
@@ -6,21 +6,21 @@ $box-shapes: (
 ) !default;
 $box-sizes: (
   "sm": (
-    "height": "6",  "width": "6"
+    "height": "6",  "min-width": "6"
   ),
   "base": (
-    "height": "8",  "width": "8"
+    "height": "8",  "min-width": "8"
   ),
   "md": (
-    "height": "10", "width": "10"
+    "height": "10", "min-width": "10"
   ),
   "lg": (
-    "height": "12", "width": "12"
+    "height": "12", "min-width": "12"
   ),
   "xl": (
-    "height": "14", "width": "14"
+    "height": "14", "min-width": "14"
   ),
   "xxl": (
-    "height": "16", "width": "16"
+    "height": "16", "min-width": "16"
   )
 ) !default;
